<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard"
    android:orientation="vertical"
    tools:context="com.example.android.quizappv1.MainActivity">


    <TextView
        style="@style/QuestionText"
        android:layout_marginBottom="@dimen/margin_bottom_title"
        android:layout_marginTop="@dimen/margin_top_title"
        android:text="@string/title"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/reset"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="reset"
            android:text="@string/name_btn1" />

        <Button
            android:id="@+id/reset2"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="getScore"
            android:text="@string/name_btn2" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question1" />

                <RadioGroup
                    android:id="@+id/radio_question_1"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_1a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_1a" />

                    <RadioButton
                        android:id="@+id/answer_1b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_1b" />

                    <RadioButton
                        android:id="@+id/answer_1c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_1c" />

                    <RadioButton
                        android:id="@+id/answer_1d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_1d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question2" />

                <RadioGroup
                    android:id="@+id/radio_question_2"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_2a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_2a" />

                    <RadioButton
                        android:id="@+id/answer_2b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_2b" />

                    <RadioButton
                        android:id="@+id/answer_2c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_2c" />

                    <RadioButton
                        android:id="@+id/answer_2d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_2d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3a" />

                    <CheckBox
                        android:id="@+id/checkbox_iron"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3b" />

                    <CheckBox
                        android:id="@+id/checkbox_steel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3c" />

                    <CheckBox
                        android:id="@+id/checkbox_copper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3d" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question4" />

                <RadioGroup
                    android:id="@+id/radio_question_4"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_4a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_4a" />

                    <RadioButton
                        android:id="@+id/answer_4b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_4b" />

                    <RadioButton
                        android:id="@+id/answer_4c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_4c" />

                    <RadioButton
                        android:id="@+id/answer_4d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_4d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/question5_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="answer here"
                        android:inputType="textShortMessage" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question6" />

                <RadioGroup
                    android:id="@+id/radio_question_6"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_6a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_6a" />

                    <RadioButton
                        android:id="@+id/answer_6b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_6b" />

                    <RadioButton
                        android:id="@+id/answer_6c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_6c" />

                    <RadioButton
                        android:id="@+id/answer_6d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_6d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question7" />

                <RadioGroup
                    android:id="@+id/radio_question_7"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_7a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_7a" />

                    <RadioButton
                        android:id="@+id/answer_7b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_7b" />

                    <RadioButton
                        android:id="@+id/answer_7c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_7c" />

                    <RadioButton
                        android:id="@+id/answer_7d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_7d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question8" />

                <RadioGroup
                    android:id="@+id/radio_question_8"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_8a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_8a" />

                    <RadioButton
                        android:id="@+id/answer_8b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_8b" />

                    <RadioButton
                        android:id="@+id/answer_8c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_8c" />

                    <RadioButton
                        android:id="@+id/answer_8d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_8d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/question_view"
                android:background="@color/standard">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question9" />

                <RadioGroup
                    android:id="@+id/radio_question_9"
                    style="@style/radio_grp_btn">

                    <RadioButton
                        android:id="@+id/answer_9a"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_9a" />

                    <RadioButton
                        android:id="@+id/answer_9b"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_9b" />

                    <RadioButton
                        android:id="@+id/answer_9c"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_9c" />

                    <RadioButton
                        android:id="@+id/answer_9d"
                        style="@style/radio_grp_btn"
                        android:text="@string/answer_9d" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
